# political-discourse-analysis

./: README.md  main.py  pre_processing.py  pyproject.toml
data/backup/: discursos01LISTA_2329 discursos_ini 02072022_fim 29102022_pagesize 550_consulta 20260406 1932.csv  discursos01LISTA_2401 discursos_ini 31102022_fim 02012023_pagesize 550_consulta 20260406 1940.csv
data/discourses/embeddings/discourses/: discourses_embeddings_UNIÃO_ini_02072022_fim_29102022.csv  discourses_embeddings_UNIÃO_ini_02072022_fim_29102022.npy  discourses_embeddings_UNIÃO_ini_31102022_fim_02012023.csv  discourses_embeddings_UNIÃO_ini_31102022_fim_02012023.npy
data/discourses/lda_files/UNIÃO/: lda_dictionary.dict  lda_distribuicao_docs.csv  lda_model.model  lda_model.model.expElogbeta.npy  lda_model.model.id2word  lda_model.model.state  lda_topN_docs_por_topico.csv  lda_topicos_termos.csv
data/party_agenda/embeddings/UNIAO/: agenda_embeddings_Manifesto_Uniao_BRASIL.layout_aware.txt_20260411_1357.csv  agenda_embeddings_Manifesto_Uniao_BRASIL.layout_aware.txt_20260411_1357.npy  (+1 more)
notebooks/: discourse_extraction.ipynb  pdf_to_txt.ipynb
notebooks/agenda/: agenda_extraction.ipynb
notebooks/discourse/: discourse_extraction.ipynb  pdf_to_txt.ipynb
src/: _00_main.py  _02_discourses_extract.py  _03_discourse_preprocessing.py  _04_embeddings.py  run_baseline.py
src/agenda/: embeddings.py  pre_processing.py  topics.py
src/discourses/: _00_main.py  _01_list_extract.py  _02_discourses_extract.py  _03_discourse_preprocessing.py  _04_embeddings.py  _04_topics.py  _05_embeddings.py  test.py
(+51 files in other folders)
