[project]
name = "political-discourse-analysis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "gensim>=4.4.0",
    "ipykernel>=7.2.0",
    "nltk>=3.9.4",
    "pandas>=3.0.2",
    "pymupdf>=1.27.2.2",
    "requests>=2.33.1",
    "sentence-transformers>=5.1.1",
    "spacy>=3.8.14",
    "pytesseract>=0.3.13",
    "spacy>=3.8.7",
    "matplotlib>=3.10.8",
]
